syntax = "proto3";

package template_service;

option go_package="genproto/template_service";

import "template.proto";